--- a/site/index.html
+++ b/site/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>NASA Imagery Viewer</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link data-trunk rel="tailwind-css" type="text/css" href="tailwind.css" media="screen" />
+    <link data-trunk rel="icon" type="image/icon" href="assets/favicon.ico" />
+    <title>NASA Imagery Viewer | Home</title>
   </head>
 
   </head>
